--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div class="main-menu">
                 <button id="btn-go-adventure" class="menu-button">冒険に出かける</button>
                 <button id="btn-go-equip" class="menu-button">スキル装備・管理</button>
+                <button id="btn-change-name" class="menu-button">名前を変更する</button>
             </div>
         </section>
 
