--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>High-Speed Hack & Slash</title>
+    <title>新巻ゲーム</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
