--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div id="battle-area">
                 <div id="enemy-display"></div>
                 <div id="battle-controls">
-                    <button id="btn-attack-hold" class="large-button">PUSH & HOLD TO FIGHT</button>
+                    <button id="btn-attack-hold" class="large-button">戦闘するぞー</button>
                 </div>
                 <div id="battle-log"></div>
             </div>
