--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
         <section id="scene-equip" class="hidden">
             <h2>スキル装備</h2>
             <div id="equip-container">
+                <div id="job-selection-area" style="margin-bottom: 20px;"></div>
+                
                 <div id="equip-party-list"></div>
 
                 <div id="equip-inventory-list"></div>
