秘密の合言葉

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <button id="btn-go-adventure" class="menu-button">冒険に出かける</button>
                 <button id="btn-go-equip" class="menu-button">スキル装備・管理</button>
                 <button id="btn-change-name" class="menu-button">名前を変更する</button>
+                <button id="btn-secret-code" class="menu-button">秘密の合言葉</button>
             </div>
         </section>
 
@@ -43,7 +44,7 @@
             <h2>スキル装備</h2>
             <div id="equip-container">
                 <div id="job-selection-area" style="margin-bottom: 20px;"></div>
-                
+
                 <div id="equip-party-list"></div>
 
                 <div id="equip-inventory-list"></div>
