輝きの結晶を見た目だけ実装

--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
         </section>
 
         <section id="scene-equip" class="hidden">
-            <h2>スキル装備</h2>
             <div id="equip-container">
                 <div id="job-selection-area" style="margin-bottom: 20px;"></div>
 
@@ -50,6 +49,8 @@
                 <div id="equip-inventory-list"></div>
 
                 <div id="equip-fragment-list"></div>
+
+                <div id="equip-crystal-list"></div>
             </div>
             <button class="btn-back">拠点に戻る</button>
         </section>
